# rust-template

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.fyralabs.RustTemplate.Devel.json  com.fyralabs.RustTemplate.json
data/: app.desktop.in.in  appdata.xml.in.in  com.fyralabs.RustTemplate.desktop.in.in  com.fyralabs.RustTemplate.gschema.xml.in  com.fyralabs.RustTemplate.metainfo.xml.in.in  gresource.xml.in  gschema.xml.in  meson.build
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml
data/resources/ui/: window.ui
data/ui/: meson.build  window.blp
po/: POTFILES.in  en_owo.po  rust-template.pot
src/: application.rs  config.rs.in  main.rs  meson.build  window.rs
