[package]
name = "rust-template"
version = "0.1.0"
authors = ["Jamie Murphy <hello@itsjamie.dev>"]
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
log = "0.4"
once_cell = "1.14"
pretty_env_logger = "0.4"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.7.0"

[dependencies.he]
package = "libhelium"
git = "https://github.com/tau-OS/rust"
version = "1.0.0"
features = ["v1_3"]
